welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:4: error: value or is not a member of Boolean
    if (die1 == 6 or die2 == 6) {sum = sum -5}
                  ^