welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.code
def withoutDoubles(die1:Int, die2:Int, noDoubles:Boolean):Int = {
  var sum : Int = 0
  if (noDoubles && die1==die2) {
    if (die1 == 6 or die2 == 6) {sum = sum -5}
    return sum +1 }
  return sum
}